--- a/MyFoodPie/app/build.gradle
+++ b/MyFoodPie/app/build.gradle
@@ -39,4 +39,6 @@ dependencies {
     compile 'com.google.code.gson:gson:2.8.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'org.greenrobot:greendao:3.2.0'
+    compile 'com.github.userswlwork:pull-to-refresh:1.0.0'
+    compile 'de.hdodenhof:circleimageview:2.1.0'
 }
